Fixing error with the overflow

--- a/_sass/base.sass
+++ b/_sass/base.sass
@@ -5,9 +5,6 @@ body
   font-weight: 400
   background-color: #eee
 
-html, body
-  overflow-x: hidden
-
 #wrap
   width: 75%
   margin: 0 auto
